# OTP-Based-Authentication-and-Attendance-Management-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  innovative-1.cpp
